# nugie-rhi

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  cla.yml
doc/: ProgrammingGuide.md  Tutorial.md
include/rhi/: d3d11.h  d3d12.h  rhi.h  utils.h  validation.h  vulkan.h
include/rhi/common/: aftermath.h  containers.h  misc.h  resource.h  resourcebindingmap.h
src/: nvrhiConfig.cmake.in
src/common/: aftermath.cpp  dxgi-format.cpp  dxgi-format.h  format-info.cpp  misc.cpp  sparse-bitset.cpp  sparse-bitset.h  state-tracking.cpp  state-tracking.h  utils.cpp  versioning.h
src/d3d11/: d3d11-backend.h  d3d11-buffer.cpp  d3d11-commandlist.cpp  d3d11-compute.cpp  d3d11-constants.cpp  d3d11-device.cpp  d3d11-graphics.cpp  d3d11-queries.cpp  d3d11-resource-bindings.cpp  d3d11-shader.cpp  d3d11-texture.cpp
src/d3d12/: d3d12-backend.h  d3d12-buffer.cpp  d3d12-commandlist.cpp  d3d12-compute.cpp  d3d12-constants.cpp  d3d12-descriptor-heap.cpp  d3d12-device.cpp  d3d12-graphics.cpp  d3d12-meshlets.cpp  d3d12-queries.cpp  d3d12-raytracing.cpp  d3d12-resource-bindings.cpp  d3d12-shader.cpp  d3d12-state-tracking.cpp  d3d12-texture.cpp  d3d12-upload.cpp
src/validation/: validation-backend.h  validation-commandlist.cpp  validation-device.cpp
src/vulkan/: vulkan-allocator.cpp  vulkan-backend.h  vulkan-buffer.cpp  vulkan-commandlist.cpp  vulkan-compute.cpp  vulkan-constants.cpp  vulkan-device.cpp  vulkan-graphics.cpp  vulkan-meshlets.cpp  vulkan-queries.cpp  vulkan-queue.cpp  vulkan-raytracing.cpp  vulkan-resource-bindings.cpp  vulkan-shader.cpp  vulkan-staging-texture.cpp  vulkan-state-tracking.cpp  vulkan-texture.cpp  vulkan-upload.cpp
tools/: rhi.natvis
tools/shaderCompiler/: CMakeLists.txt  options.cpp  shaderCompiler.cpp
